tests/loops/invalid/syntax_err_too_many_for_clauses.amu
main :: () -> s32 {
    for (;;;)
        3;
    return 0;
}